# ace-x86_64

./: CMakeLists.txt  README.md  TODO  grammar.md  main.cpp
acc/backend/: generation.hpp  x86directive.hpp  x86mnem.hpp  x86ops.hpp  x86reg.hpp
acc/cli/: acccli.hpp
acc/fnl/: pmonadic.hpp
acc/frontend/: accast.hpp  acclexer.hpp  accparser.hpp  accprinter.hpp  acctoken.hpp  printer.hpp  storage.hpp  tkxmacro.hpp
acc/include/: acccli.hpp  acclexer.hpp  acclog.hpp  lexer.hpp  tkxmacro.hpp  visitor.hpp
acc/include/cli/: acccli.hpp  pmonadic.hpp  prs_combinator.hpp
acc/include/fnl/: pmonadic.hpp
acc/test/: parser.hpp  test_parser.hpp
acc/traits/: appendable.hpp  arithmeticable.hpp
acc/utils/: acclog.hpp  ansi.hpp  eval.hpp
accx86_64/backend/: generation.hpp  instruction.hpp  x86ops.hpp  x86reg.hpp
accx86_64/cli/: acccli.hpp  monaparsers.hpp
accx86_64/fnl/: pmonadic.hpp
accx86_64/frontend/: accast.hpp  accenv.hpp  acclexer.hpp  accparser.hpp  accparserror.hpp  accprinter.hpp  acctoken.hpp  storage.hpp  tempCodeRunnerFile.hpp  tkxmacro.hpp
accx86_64/frontend/analysis/: analyzer.hpp
accx86_64/frontend/analysis/typesys/: acctype_info.hpp  integral_types.hpp  type_checker.hpp  type_conversions.hpp  type_error.hpp  types.hpp
accx86_64/frontend/printers/: ast_printer.hpp  token_printer.hpp
accx86_64/frontend/statics/: ro_accdelims.hpp  ro_acckw.hpp  ro_accpairdelims.hpp  ro_accprec.hpp  ro_acctypes.hpp  ro_tokenmap.hpp  tkxmacro.hpp
accx86_64/frontend/typesys/: type_error.hpp  types.hpp
accx86_64/frontend/utils/: lexeme_inspector.hpp  type_inspector.hpp
accx86_64/traits/: acc_matchable.hpp  token_trait.hpp
accx86_64/utils/: acclog.hpp  ansi.hpp  color_print.hpp  eval.hpp  inker.hpp  visitor.hpp
devsandbox/: outf.txt
example/: test.acc
test/: doctest.hpp  dtest_test_lexer.cpp  dtest_test_monadic.cpp  dtest_test_parser.cpp  dtest_test_token.cpp  dtest_test_types.cpp  test_parser.hpp
test/test_frontend/: test_lexer.hpp  test_parser.hpp
test/test_utils/: test_eval.hpp
